<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/header_tip_add"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tipTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:gravity="top|start"
        android:hint="@string/hint_tip_title"
        android:maxLength="144"
        android:maxLines="4" />

    <EditText
        android:id="@+id/tipMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tipTitle"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tipTitle"
        android:gravity="top|start"
        android:hint="@string/hint_tip_message"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLines="6"
        android:minLines="2"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/tipCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tipMessage"
        android:hint="@string/hint_tip_country"
        android:lines="1"
        android:singleLine="true" />

</RelativeLayout>
